# internal/oapi/models.gen.go
@@ -1,7 +1,121 @@
 // Package oapi provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package oapi
+
+// Defines values for AmmoTag.
+const (
+	EnergyCell AmmoTag = "energy_cell"
+	N9mm       AmmoTag = "9mm"
+	Rifle      AmmoTag = "rifle"
+	Shell      AmmoTag = "shell"
+)
+
+// Defines values for AttackCategory.
+const (
+	BOW     AttackCategory = "BOW"
+	CANON   AttackCategory = "CANON"
+	FIST    AttackCategory = "FIST"
+	HANDGUN AttackCategory = "HANDGUN"
+	RIFLE   AttackCategory = "RIFLE"
+	SPEAR   AttackCategory = "SPEAR"
+	SWORD   AttackCategory = "SWORD"
+)
+
+// Defines values for Element.
+const (
+	ElementCHILL   Element = "CHILL"
+	ElementFIRE    Element = "FIRE"
+	ElementNONE    Element = "NONE"
+	ElementPHOTON  Element = "PHOTON"
+	ElementTHUNDER Element = "THUNDER"
+)
+
+// Defines values for EquipSlot.
+const (
+	EquipSlotARMS    EquipSlot = "ARMS"
+	EquipSlotFEET    EquipSlot = "FEET"
+	EquipSlotHANDS   EquipSlot = "HANDS"
+	EquipSlotHEAD    EquipSlot = "HEAD"
+	EquipSlotLEGS    EquipSlot = "LEGS"
+	EquipSlotTORSO   EquipSlot = "TORSO"
+	EquipSlotWEAPON1 EquipSlot = "WEAPON1"
+	EquipSlotWEAPON2 EquipSlot = "WEAPON2"
+	EquipSlotWEAPON3 EquipSlot = "WEAPON3"
+	EquipSlotWEAPON4 EquipSlot = "WEAPON4"
+	EquipSlotWEAPON5 EquipSlot = "WEAPON5"
+)
+
+// Defines values for EquipmentCategory.
+const (
+	EquipmentCategoryARMS    EquipmentCategory = "ARMS"
+	EquipmentCategoryFEET    EquipmentCategory = "FEET"
+	EquipmentCategoryHANDS   EquipmentCategory = "HANDS"
+	EquipmentCategoryHEAD    EquipmentCategory = "HEAD"
+	EquipmentCategoryJEWELRY EquipmentCategory = "JEWELRY"
+	EquipmentCategoryLEGS    EquipmentCategory = "LEGS"
+	EquipmentCategoryTORSO   EquipmentCategory = "TORSO"
+)
+
+// Defines values for FactionMemberType.
+const (
+	FactionNeutral FactionMemberType = "FactionNeutral"
+)
+
+// Defines values for FoliageType.
+const (
+	FoliageTypeMinus1 FoliageType = -1
+	FoliageTypeMinus3 FoliageType = -3
+	FoliageTypeN0     FoliageType = 0
+)
+
+// Defines values for HealingValueType.
+const (
+	PERCENTAGE HealingValueType = "PERCENTAGE"
+)
+
+// Defines values for ShelterType.
+const (
+	ShelterTypeN0  ShelterType = 0
+	ShelterTypeN10 ShelterType = 10
+	ShelterTypeN5  ShelterType = 5
+)
+
+// Defines values for SpriteDepth.
+const (
+	SpriteDepthN0 SpriteDepth = 0
+	SpriteDepthN1 SpriteDepth = 1
+	SpriteDepthN2 SpriteDepth = 2
+	SpriteDepthN3 SpriteDepth = 3
+)
+
+// Defines values for TargetGroup.
+const (
+	TargetGroupALLY   TargetGroup = "ALLY"
+	TargetGroupENEMY  TargetGroup = "ENEMY"
+	TargetGroupNONE   TargetGroup = "NONE"
+	TargetGroupWEAPON TargetGroup = "WEAPON"
+)
+
+// Defines values for TargetNum.
+const (
+	ALL    TargetNum = "ALL"
+	SINGLE TargetNum = "SINGLE"
+)
+
+// Defines values for UsableScene.
+const (
+	ANY    UsableScene = "ANY"
+	BATTLE UsableScene = "BATTLE"
+	FIELD  UsableScene = "FIELD"
+)
+
+// Defines values for WaterType.
+const (
+	WaterTypeMinus10 WaterType = -10
+	WaterTypeMinus5  WaterType = -5
+	WaterTypeN0      WaterType = 0
+)
 
 // Abilities 能力値
 type Abilities struct {
@@ -15,10 +129,18 @@ type Abilities struct {
 
 // Ammo 弾薬設定
 type Ammo struct {
-	AccuracyBonus int32  `json:"accuracyBonus"`
-	AmmoTag       string `json:"ammoTag"`
-	DamageBonus   int32  `json:"damageBonus"`
+	AccuracyBonus int32 `json:"accuracyBonus"`
+
+	// AmmoTag 弾薬タグ
+	AmmoTag     AmmoTag `json:"ammoTag"`
+	DamageBonus int32   `json:"damageBonus"`
 }
+
+// AmmoTag 弾薬タグ
+type AmmoTag string
+
+// AttackCategory 攻撃種別
+type AttackCategory string
 
 // Book 本の設定
 type Book struct {
@@ -47,9 +169,14 @@ type CommandTableList struct {
 
 // Consumable 消費可能アイテムの設定
 type Consumable struct {
-	TargetGroup string `json:"targetGroup"`
-	TargetNum   string `json:"targetNum"`
-	UsableScene string `json:"usableScene"`
+	// TargetGroup ターゲットグループ
+	TargetGroup TargetGroup `json:"targetGroup"`
+
+	// TargetNum ターゲット数
+	TargetNum TargetNum `json:"targetNum"`
+
+	// UsableScene 使用可能シーン
+	UsableScene UsableScene `json:"usableScene"`
 }
 
 // Dialog 会話データ
@@ -84,6 +211,9 @@ type DropTableList struct {
 // DungeonGateTriggerRaw ダンジョン選択ゲートトリガー
 type DungeonGateTriggerRaw = map[string]interface{}
 
+// Element 攻撃属性
+type Element string
+
 // EnemyTable 敵テーブル
 type EnemyTable struct {
 	Entries []EnemyTableEntry `json:"entries"`
@@ -113,25 +243,50 @@ type EquipBonus struct {
 	Vitality  int32 `json:"vitality"`
 }
 
+// EquipSlot 装備スロット。防具部位 + 武器スロット
+type EquipSlot string
+
+// EquipmentCategory 装備部位
+type EquipmentCategory string
+
 // Error エラーレスポンス
 type Error struct {
 	Message string `json:"message"`
 }
 
+// FactionMemberType 派閥タイプ
+type FactionMemberType string
+
 // Fire 遠距離攻撃設定
 type Fire struct {
-	Accuracy       int32  `json:"accuracy"`
-	AmmoTag        string `json:"ammoTag"`
-	AttackCategory string `json:"attackCategory"`
-	AttackCount    int32  `json:"attackCount"`
-	Cost           int32  `json:"cost"`
-	Damage         int32  `json:"damage"`
-	Element        string `json:"element"`
-	MagazineSize   int32  `json:"magazineSize"`
-	ReloadEffort   int32  `json:"reloadEffort"`
-	TargetGroup    string `json:"targetGroup"`
-	TargetNum      string `json:"targetNum"`
+	Accuracy int32 `json:"accuracy"`
+
+	// AmmoTag 弾薬タグ
+	AmmoTag AmmoTag `json:"ammoTag"`
+
+	// AttackCategory 攻撃種別
+	AttackCategory AttackCategory `json:"attackCategory"`
+	AttackCount    int32          `json:"attackCount"`
+	Cost           int32          `json:"cost"`
+	Damage         int32          `json:"damage"`
+
+	// Element 攻撃属性
+	Element      Element `json:"element"`
+	MagazineSize int32   `json:"magazineSize"`
+	ReloadEffort int32   `json:"reloadEffort"`
+
+	// TargetGroup ターゲットグループ
+	TargetGroup TargetGroup `json:"targetGroup"`
+
+	// TargetNum ターゲット数
+	TargetNum TargetNum `json:"targetNum"`
 }
+
+// FoliageType 植生タイプ
+type FoliageType float32
+
+// HealingValueType 回復量の計算方式
+type HealingValueType string
 
 // Item アイテム
 type Item struct {
@@ -209,14 +364,22 @@ type LightSource struct {
 
 // Melee 近接攻撃設定
 type Melee struct {
-	Accuracy       int32  `json:"accuracy"`
-	AttackCategory string `json:"attackCategory"`
-	AttackCount    int32  `json:"attackCount"`
-	Cost           int32  `json:"cost"`
-	Damage         int32  `json:"damage"`
-	Element        string `json:"element"`
-	TargetGroup    string `json:"targetGroup"`
-	TargetNum      string `json:"targetNum"`
+	Accuracy int32 `json:"accuracy"`
+
+	// AttackCategory 攻撃種別
+	AttackCategory AttackCategory `json:"attackCategory"`
+	AttackCount    int32          `json:"attackCount"`
+	Cost           int32          `json:"cost"`
+	Damage         int32          `json:"damage"`
+
+	// Element 攻撃属性
+	Element Element `json:"element"`
+
+	// TargetGroup ターゲットグループ
+	TargetGroup TargetGroup `json:"targetGroup"`
+
+	// TargetNum ターゲット数
+	TargetNum TargetNum `json:"targetNum"`
 }
 
 // Member メンバー
@@ -229,8 +392,10 @@ type Member struct {
 	// Dialog 会話データ
 	Dialog        *Dialog `json:"dialog,omitempty"`
 	DropTableName string  `json:"dropTableName"`
-	FactionType   string  `json:"factionType"`
-	IsBoss        bool    `json:"isBoss"`
+
+	// FactionType 派閥タイプ
+	FactionType *FactionMemberType `json:"factionType,omitempty"`
+	IsBoss      bool               `json:"isBoss"`
 
 	// LightSource 光源設定
 	LightSource     *LightSource `json:"lightSource,omitempty"`
@@ -282,7 +447,9 @@ type Profession struct {
 // ProfessionEquip 職業初期装備
 type ProfessionEquip struct {
 	Name string `json:"name"`
-	Slot string `json:"slot"`
+
+	// Slot 装備スロット。防具部位 + 武器スロット
+	Slot EquipSlot `json:"slot"`
 }
 
 // ProfessionItem 職業初期所持アイテム
@@ -341,9 +508,11 @@ type PropList struct {
 
 // ProvidesHealing 回復効果
 type ProvidesHealing struct {
-	Amount    int32   `json:"amount"`
-	Ratio     float64 `json:"ratio"`
-	ValueType string  `json:"valueType"`
+	Amount int32   `json:"amount"`
+	Ratio  float64 `json:"ratio"`
+
+	// ValueType 回復量の計算方式
+	ValueType HealingValueType `json:"valueType"`
 }
 
 // RGBAColor RGBA色
@@ -372,6 +541,9 @@ type RecipeList struct {
 	TotalCount int32    `json:"totalCount"`
 }
 
+// ShelterType 遮蔽タイプ
+type ShelterType float32
+
 // SkillBook スキル本設定
 type SkillBook struct {
 	MaxLevel      int32  `json:"maxLevel"`
@@ -379,11 +551,15 @@ type SkillBook struct {
 	TargetSkill   string `json:"targetSkill"`
 }
 
+// SpriteDepth スプライト描画深度
+type SpriteDepth float32
+
 // SpriteRender スプライトレンダー設定
 type SpriteRender struct {
-	Depth           int32  `json:"depth"`
-	SpriteKey       string `json:"spriteKey"`
-	SpriteSheetName string `json:"spriteSheetName"`
+	// Depth スプライト描画深度
+	Depth           SpriteDepth `json:"depth"`
+	SpriteKey       string      `json:"spriteKey"`
+	SpriteSheetName string      `json:"spriteSheetName"`
 }
 
 // SpriteSheet スプライトシート
@@ -398,18 +574,30 @@ type SpriteSheetList struct {
 	TotalCount int32         `json:"totalCount"`
 }
 
+// TargetGroup ターゲットグループ
+type TargetGroup string
+
+// TargetNum ターゲット数
+type TargetNum string
+
 // Tile タイル
 type Tile struct {
 	BlockPass   bool   `json:"blockPass"`
 	BlockView   bool   `json:"blockView"`
 	Description string `json:"description"`
-	Foliage     int32  `json:"foliage"`
-	Name        string `json:"name"`
-	Shelter     int32  `json:"shelter"`
+
+	// Foliage 植生タイプ
+	Foliage FoliageType `json:"foliage"`
+	Name    string      `json:"name"`
+
+	// Shelter 遮蔽タイプ
+	Shelter ShelterType `json:"shelter"`
 
 	// SpriteRender スプライトレンダー設定
 	SpriteRender SpriteRender `json:"spriteRender"`
-	Water        int32        `json:"water"`
+
+	// Water 水タイプ
+	Water WaterType `json:"water"`
 }
 
 // TileList タイル一覧
@@ -418,21 +606,29 @@ type TileList struct {
 	TotalCount int32  `json:"totalCount"`
 }
 
+// UsableScene 使用可能シーン
+type UsableScene string
+
 // WarpEscapeTriggerRaw 脱出ワープトリガー
 type WarpEscapeTriggerRaw = map[string]interface{}
 
 // WarpNextTriggerRaw 次階層ワープトリガー
 type WarpNextTriggerRaw = map[string]interface{}
 
+// WaterType 水タイプ
+type WaterType float32
+
 // Weapon 武器マーカー
 type Weapon = map[string]interface{}
 
 // Wearable 装備可能設定
 type Wearable struct {
-	Defense           int32  `json:"defense"`
-	EquipmentCategory string `json:"equipmentCategory"`
-	InsulationCold    int32  `json:"insulationCold"`
-	InsulationHeat    int32  `json:"insulationHeat"`
+	Defense int32 `json:"defense"`
+
+	// EquipmentCategory 装備部位
+	EquipmentCategory EquipmentCategory `json:"equipmentCategory"`
+	InsulationCold    int32             `json:"insulationCold"`
+	InsulationHeat    int32             `json:"insulationHeat"`
 }
 
 // CommandTablesCreateJSONRequestBody defines body for CommandTablesCreate for application/json ContentType.
